    cause problems when cross-building and using unmatched combinations of
    dpkg-dev and gcc. Closes: #751363
  * Update i386 architecture GNU cpu regex in cputable to match i786 too.
  * Remove unused pkglibdir variable from libdpkg.pc.in.
  * Perl modules:
    - Add new set_as_auto() method to Dpkg::Substvars.
    - Add support for sig and delete_sig spawn() options in Dpkg::IPC.
  * Mark Format and Installed-Size as automatic substvars in dpkg-genchanges
    and dpkg-gencontrol respectively.
  * Warn on usage of deprecated Source-Version substvar.
  * Say OpenPGP instead of PGP when referring to the standard on code comments
    and output messages.
  * Add a hint to the “no dependency information found” error message in
    dpkg-shlibdeps, to check if the library is actually packaged.
    Thanks to Sylvestre Ledru <sylvestre@debian.org>. Closes: #756230

  [ Updated programs translations ]
  * Danish (Joe Dalton). Closes: #754127
  * Portuguese (Miguel Figueiredo). Closes: #756920
  * Spanish (Guillem Jover): Fix «dpkg-query -l» header. Closes: #756209
  * Swedish (Peter Krefting).
  * French (Jean-Baka Domelevo Entfellner, Julien Patriarca).

  [ Updated scripts translations ]
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Thu, 05 Jun 2014 20:49:17 +0200

dpkg (1.17.10) unstable; urgency=medium

  [ Guillem Jover ]
  * Use libtool to build the static libraries, which makes it possible to
    embed libcompat inside libdpkg, as required by some external programs
    linking against the latter. Closes: #746122
  * Fix word wrapping logic in dselect. Regression introduced in dpkg 1.17.3.
  * Fix possible out of bounds buffer read access in the error output on
    bogus ar member sizes.
  * Fix memory leaks in buffer_copy() on error conditions.
  * Test suite:
    - Improve C code coverage.
    - Add template test cases for most perl modules.