@@ -75,6 +75,7 @@ dpkg (1.17.11) UNRELEASED; urgency=low
   * Perl modules:
     - Add new set_as_auto() method to Dpkg::Substvars.
     - Add support for sig and delete_sig spawn() options in Dpkg::IPC.
+    - Add %opts to ensure_open() member in Dpkg::Compression::FileHandle.
   * Mark Format and Installed-Size as automatic substvars in dpkg-genchanges
     and dpkg-gencontrol respectively.
   * Warn on usage of deprecated Source-Version substvar.
